samples/_failures_safe/1761075463_29e28e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9add7d63.c:184: error: expected ‘;’, ‘,’ or ‘)’ at end of input
